--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -15,8 +15,8 @@
 			<h1>Sign in</h1>
 			<form action="/login/password" method="post">
 				<section>
-					<label for="username">Username</label>
-					<input id="username" name="username" type="text" autocomplete="username" required autofocus>
+					<label for="username">Email</label>
+					<input id="username" name="email" type="text" autocomplete="username" required autofocus>
 				</section>
 				<section>
 					<label for="current-password">Password</label>
